--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             </div>
                             <div class="dynamic-txts">
                                 <li><span>Web Developer.</span></li>
-                                <li><span>Designer.</span></li>
+                                <li><span>Web Designer.</span></li>
                                 <li><span>proud Indian.</span></li>
                             </div>
                         </div>
