--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                                 I'm a
                             </div>
                             <div class="dynamic-txts">
-                                <li><span>Web Developer.</span></li>
-                                <li><span>Web Designer.</span></li>
+                                <li><span>Full Stack Web Developer.</span></li>
+                                <li><span>Software Engineer.</span></li>
                                 <li><span>proud Indian.</span></li>
                             </div>
                         </div>
