--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                                 I'm a
                             </div>
                             <div class="dynamic-txts">
-                                <li><span>Full Stack Web Developer.</span></li>
+                                <li><span>Web Developer.</span></li>
                                 <li><span>Software Engineer.</span></li>
                                 <li><span>proud Indian.</span></li>
                             </div>
