about para changed

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     
                     <div>
                         <h2 class="about__subtitle">I'am Ilix.</h2>
-                        <p class="about__text">Hi I am Ilish Jyotis Hazarika, I use Ilix as a short-form where x denote as s,h.  I am 23 year old Web developer, Digital Marketer from Assam, India. I am an Information Technology Geek, currently working with my own Start-up Company.  I am a curious seeker with a creative mind. I like to build things by pressing keys I like to build new projects just to tickle my brain. Have a look on my skills and the Technology i used most. I am always excited to do business with like minded people. If you are the one, lets discuss over the Chai.</p>           
+                        <p class="about__text">Hi I am Ilish Jyotis Hazarika, I use Ilix as a short-form where x denote as s,h.  I am 24 year old Web developer from Assam, India. I am a curious seeker. Have a look on my skills and the Technology i used most. If you have a project & you need developer. Then, you are reading the right article. Lets get connect... </p>           
                     </div>                                   
                 </div>
             </section>
