--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
 
                 <div class="home__social">
                     <a href="" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
-                    <a href="" class="home__social-icon"><i class='bx bxl-facebook'></i></a>
                     <a href="" class="home__social-icon"><i class='bx bxl-github' ></i></a>
                 </div>
 
@@ -226,10 +225,10 @@
         </footer>
 
 
-        <!--===== SCROLL REVEAL =====-->
+       <!-- reveal on scroll  -->
         <script src="https://unpkg.com/scrollreveal"></script>
 
-        <!--===== MAIN JS =====-->
+        
         <script src="assets/js/main.js"></script>
     </body>
 </html>
