--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     
                     <div>
                         <h2 class="about__subtitle">I'am Ilix.</h2>
-                        <p class="about__text">Hi I am Ilish Jyotis Hazarika, I use Ilix as a short-form where x denote as s,h.  I am 24 year old Web developer from Assam, India. I am a curious seeker. Have a look on my skills and the Technology i used most. If you have a project & you need developer. Then, you are reading the right article. Lets get connect... </p>           
+                        <p class="about__text">Hi I am Ilish Jyotis Hazarika, I use Ilix as a short-form where x denote as s,h.  I am 24 year old Web developer from Assam, India. I am a curious seeker. Have a look on my skills and the Technology i used most. If you have a project & you need developer! Then, you are reading the right article. Lets get connect... </p>           
                     </div>                                   
                 </div>
             </section>
