--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                 
 
                 <div class="home__social">
-                    <a href="" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
-                    <a href="" class="home__social-icon"><i class='bx bxl-github' ></i></a>
+                    <a href="www.linkedin.com/in/ilish-hazarika-b36413182" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
+                    <a href="https://github.com/Ilix-studio" class="home__social-icon"><i class='bx bxl-github' ></i></a>
                 </div>
 
                
