--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 
 
                 <div class="home__social">
-                    <a href="www.linkedin.com/in/ilish-hazarika-b36413182" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
+                    <a href="https://www.linkedin.com/in/ilish-hazarika-b36413182/" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
                     <a href="https://github.com/Ilix-studio" class="home__social-icon"><i class='bx bxl-github' ></i></a>
                 </div>
 
