--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
                 <span
                   class="txt-type"
                   data-wait="3000"
-                  data-words='["Proud Indian.", "Software Developer.", "🇮🇳"]'
+                  data-words='["Proud Indian.", "Software Developer."]'
                 ></span>
               </h1>
             </div>
           </div>
 
           <a href="tel:+91-910-103-5038" class="button"
-            >Click here to call me</a
+            >Click here to call me.</a
           >
         </div>
         <div class="home__img">
