--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
             <li class="nav__item">
               <a href="#skills" class="nav__link">Skills</a>
             </li>
-            <li class="nav__item">
-              <a href="blogs.html" class="nav__link">Blogs</a>
-            </li>
+
             <li class="nav__item">
               <a href="#contact" class="nav__link">Contact</a>
             </li>
@@ -65,7 +63,7 @@
                 <span
                   class="txt-type"
                   data-wait="3000"
-                  data-words='["Proud Indian.", "Software Developer."]'
+                  data-words='["Proud Indian.", "Software Dev."]'
                 ></span>
               </h1>
             </div>
@@ -103,11 +101,11 @@
           <div>
             <h2 class="about__subtitle">I'am Ilix.</h2>
             <p class="about__text">
-              Hi, I am Ilish Jyotis Hazarika. I am 24 years old Web developer
-              from Assam, India. ILIX where X === s,h. I am a curious seeker.
-              Have a look at my skills and the Technology I used most. If you
-              have a project & you need a developer! Then, you are reading the
-              right article. Let us get connected…
+              Hi, I’m Ilish Jyotis Hazarika from Assam, India. I work across
+              frontend, backend, and mobile development, building reliable and
+              well-crafted digital products. If you’re looking for someone who
+              can handle an end-to-end project, feel free to reach out—I prefer
+              connecting directly over a call or a quick Google Meet.
             </p>
           </div>
         </div>
@@ -124,7 +122,7 @@
             <div class="skills__data">
               <div class="skills__names">
                 <i class="bx bxs-paint skills__icon"></i>
-                <span class="skills__name">UX/UI</span>
+                <span class="skills__name">Frontend</span>
               </div>
               <div class="skills__bar skills__ux"></div>
               <div>
@@ -135,7 +133,7 @@
             <div class="skills__data">
               <div class="skills__names">
                 <i class="bx bxl-html5 skills__icon"></i>
-                <span class="skills__name">HTML5</span>
+                <span class="skills__name">Backend</span>
               </div>
               <div class="skills__bar skills__html"></div>
               <div>
@@ -145,31 +143,11 @@
             <div class="skills__data">
               <div class="skills__names">
                 <i class="bx bxl-css3 skills__icon"></i>
-                <span class="skills__name">CSS3</span>
+                <span class="skills__name">AI</span>
               </div>
               <div class="skills__bar skills__css"></div>
               <div>
-                <span class="skills__percentage">85%</span>
-              </div>
-            </div>
-            <div class="skills__data">
-              <div class="skills__names">
-                <i class="bx bxl-javascript skills__icon"></i>
-                <span class="skills__name">JAVASCRIPT</span>
-              </div>
-              <div class="skills__bar skills__js"></div>
-              <div>
-                <span class="skills__percentage">65%</span>
-              </div>
-            </div>
-            <div class="skills__data">
-              <div class="skills__names">
-                <i class="bx bxl-react skills__icon"></i>
-                <span class="skills__name">React</span>
-              </div>
-              <div class="skills__bar skills__ux"></div>
-              <div>
-                <span class="skills__percentage">60%</span>
+                <span class="skills__percentage">25%</span>
               </div>
             </div>
           </div>
@@ -179,79 +157,12 @@
           </div>
         </div>
       </section>
-
-      <!--===== CONTACT =====-->
-      <section class="contact section" id="contact">
-        <h2 class="section-title">Contact me</h2>
-
-        <div class="contact__container bd-grid">
-          <form
-            class="contact-form"
-            method="post"
-            action="https://formspree.io/f/mzbyvyze"
-          >
-            <input
-              type="text"
-              name="name"
-              placeholder="Your Name"
-              class="contact__input"
-              required
-            />
-            <input
-              type="mail"
-              name="email"
-              placeholder="Email"
-              class="contact__input"
-              required
-            />
-            <input
-              type="number"
-              name="number"
-              placeholder="Number"
-              class="contact__input"
-              required
-            />
-            <textarea
-              name=""
-              placeholder="Message"
-              id=""
-              cols="0"
-              rows="10"
-              class="contact__input"
-              required
-            ></textarea>
-
-            <input class="contact__button button" type="submit" value="Send" />
-          </form>
-        </div>
-      </section>
     </main>
 
     <!--===== FOOTER =====-->
     <!-- going to add music at this footer  -->
     <footer class="footer">
-      <p class="footer__title">My song of the day:-</p>
-      <h4 id="title">Yeh Jo Des Hai Tera</h4>
-      <p>🧡🤍💚</p>
-
-      <div class="music-container" id="music-container">
-        <audio src="music/Indian.mp3" id="audio"></audio>
-
-        <div class="img-container">
-          <img src="music/india.png" alt="music-cover" id="cover" />
-        </div>
-        <div class="navigation">
-          <button id="play" class="action-btn action-btn-big">
-            <i class="fas fa-play"></i>
-          </button>
-        </div>
-      </div>
-
-      <br />
-      <br />
-      <br />
-
-      <p>&#169; 2023 copyright all right reserved.</p>
+      <p>&#169; 2025 updated.</p>
     </footer>
 
     <!-- reveal on scroll  -->
