--- a/index.html
+++ b/index.html
@@ -38,10 +38,6 @@
             <li class="nav__item">
               <a href="#skills" class="nav__link">Skills</a>
             </li>
-
-            <li class="nav__item">
-              <a href="#contact" class="nav__link">Contact</a>
-            </li>
           </ul>
         </div>
 
@@ -62,19 +58,19 @@
                 <br />
                 <span
                   class="txt-type"
-                  data-wait="3000"
-                  data-words='["Proud Indian.", "Software Dev."]'
+                  data-wait="3500"
+                  data-words='["Software Dev.", "Problem Solver."]'
                 ></span>
               </h1>
             </div>
           </div>
 
-          <a href="tel:+91-910-103-5038" class="button"
+          <a href="tel:+91-910-103-5038" class="call_button"
             >Click here to call me.</a
           >
         </div>
         <div class="home__img">
-          <img src="assets/img/FF.svg" alt="" />
+          <img src="assets/img/GG.svg" alt="" />
         </div>
 
         <div class="home__social">
